fix(*): company header overflow

--- a/shared/components/company-header/company-header.module.scss
+++ b/shared/components/company-header/company-header.module.scss
@@ -35,6 +35,11 @@
       font-weight: 500;
       font-size: 32px;
       color: white;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       .companyTypeIcon {
         margin: 0 1rem;
